Alignment fix for posts element.
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/themes/upfront@10986 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/elements/upfront-posts/css/style.css
+++ b/elements/upfront-posts/css/style.css
@@ -28,7 +28,11 @@ li.uposts-post #upfront-title {
 	border: none;
 }
 */
-
+ul.uposts-posts {
+	list-style: none !important;
+	margin: 0 !important;
+	padding: 0 !important;
+}
 .upost_thumbnail_changer {
 	border: 2px dashed #3f5870;
 	color: #3f5870;
